<resources>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="timings_header">Timings</string>
    <string name="colors_header">Colors</string>

    <!-- Timings Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="show_interval_title">When showing (ms)</string>
    <string name="turn_change_interval_title">After input (ms)</string>
    <string name="countdown_enable_title">Countdown at start</string>
    <string name="countdown_length_title">Countdown length (s)</string>
    <string name="flash_duration_title">Flash duration (ms)</string>

    <!-- Non-display strings -->
    <string name="db_name">scores.db</string>

    <!-- Game strings -->
    <string name="app_name">MemGame</string>
    <string name="exit">EXIT</string>
    <string name="settings">SETTINGS</string>
    <string name="start">START</string>
    <string name="logo_desc">Logo of the app, which looks like three boxes</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="help">HELP</string>
    <string name="help_message">This is a simple memory game.\n
        You will be shown a sequence of flashing cells on a grid.\n
        You then have to repeat the sequence by clicking on the cells in the same order.\n
        Every turn, the sequence gets longer by one.\n
        Have fun!
    </string>
    <string name="ok">OK, UNDERSTOOD!</string>
    <string name="help_title">HOW TO PLAY</string>
    <string name="textview">Start</string>
    <string name="back_to_menu">Go back to main menu</string>
    <string name="go">GO!</string>
    <string name="your_turn">Your turn!</string>
    <string name="watch">Watch</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong! Try again?</string>
    <string name="def_score">Score: 0</string>
    <string name="score">Score: %1$d</string>
    <string name="starting_score_title">Starting score</string>
    <string name="sound_enable_title">Chime sound on flash</string>
    <string name="hs_screen_title">Top 3 scores</string>
</resources>
