<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="General">
        <SwitchPreference
            android:defaultValue="true"

            app:key="countdown_enable"
            app:title="@string/countdown_enable_title" />
        <SwitchPreference
            android:defaultValue="true"

            app:key="sound_enable"
            app:title="@string/sound_enable_title" />
        <EditTextPreference
            android:defaultValue="5"
            android:digits="0123456789"
            android:inputType="number"
            app:key="countdown_length"
            app:title="@string/countdown_length_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="3"
            android:digits="0123456789"
            android:inputType="number"
            app:key="starting_score"
            app:title="@string/starting_score_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/timings_header">

        <EditTextPreference
            android:defaultValue="700"
            android:digits="0123456789"
            android:inputType="number"
            app:key="show_interval"
            app:title="@string/show_interval_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="500"
            android:digits="0123456789"
            android:inputType="number"
            app:key="turn_change_interval"
            app:title="@string/turn_change_interval_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="500"
            android:digits="0123456789"
            android:inputType="number"
            app:key="flash_duration"
            app:title="@string/flash_duration_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/colors_header">

        <SwitchPreferenceCompat
            app:key="test"
            app:title="test" />

    </PreferenceCategory>

</PreferenceScreen>