<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceBright"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="154dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/main_app_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_menu_margins"
        android:fontFamily="serif-monospace"
        android:text="@string/app_name"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textFontWeight="700"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_menu_margins"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/start"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_menu_margins"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/settings"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/quitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_menu_margins"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/exit"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
